Implement custom 404, 403, and 500 error pages

--- a/.htaccess
+++ b/.htaccess
@@ -16,3 +16,8 @@ Options -Indexes
     # Block direct access to includes directory
     RewriteRule ^includes/ - [F,L]
 </IfModule>
+
+# Custom Error Pages
+ErrorDocument 404 /404.php
+ErrorDocument 403 /403.php
+ErrorDocument 500 /500.php
